--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "CLI Application for managing contacts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "commander": "^11.1.0",
     "readline": "^1.3.0"
   }
 }
