--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "github/AnnaIstochnikova/goit-node.js-hw-01"
